<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scores"

            android:layout_marginTop="8dp"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#000000" />
        <LinearLayout
            android:id="@+id/score_board"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/computer_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:text="0"
                android:layout_weight="1"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/your_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:text="0"
                android:layout_weight="1"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/cmpShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/computer_s_choice"
                android:textColor="@color/text_color"/>
            <TextView
                android:id="@+id/playerShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/choose_your_animal"
                android:textColor="@color/text_color" />
            <ImageButton
                android:id="@+id/btnMouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/playerShow"
                android:layout_below="@+id/playerShow"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/mouse"
                android:src="@drawable/mouse"
                android:background="@drawable/button_selector"
                />
            <ImageButton
                android:id="@+id/btnCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/btnMouse"
                android:layout_below="@id/btnMouse"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/cat"
                android:src="@drawable/cat"
                android:background="@drawable/button_selector"
                />
            <ImageButton
                android:id="@+id/btnElephant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/btnCat"
                android:layout_below="@id/btnCat"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/elephant"
                android:src="@drawable/elephant"
                android:background="@drawable/button_selector"
                />
            <ImageView
                android:id="@+id/viewCmp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/btnCat"
                android:layout_below="@id/cmpShow"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/cmpviewdes"
                android:background="@drawable/button_selector"
                android:visibility="invisible"
                />
            <ImageView
                android:id="@+id/animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/btnCat"
                android:layout_below="@id/cmpShow"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/cmpviewdes"
                android:background="@drawable/button_selector"
                android:src="@drawable/animation_list"
                />
        </RelativeLayout>
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Result"
            android:layout_marginTop="8dp"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />
        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            />
    </LinearLayout>
</ScrollView>
